# juniors_interview

./: .gitignore  1 solution.py  2 solution.py  3 solution.py  README.md  animals.csv  beasts.csv  conftest.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  res.csv  setup.cfg  sobes.py  sobes_conclusions.py
solution/: task1.py  task2.py  task3.py
task1/: 1 solution.py  README.md  Solution.py  __init__.py  pytest.ini  solution.py  solution1.py  solution_test.py  solution_tests.py  task1.md  task1.py  test.py  test_1.py  test_solition.py  test_solution.py  test_task1.py  tests.py  the task
task1/solution/: __init__.py  (+6 more)
task1/solution.py/: main.py  tests.py
task2/: 2 solution.py  README.md  WikiAnimalParser.py  beasts.csv  beats.csv  config.py  constants.py  fast_solution.py  fauna.csv  index.html  main.py  mock_settings.py  pyproject.toml  requirements.txt  res.csv  scrapy.cfg  solution.py  solution2.py  solution_async.py  solution_sync.py  solution_test.py  solution_tests.py  solutionv2.py  task2.md  task2.py  test.py  test_solution  test_solution.py  test_task2.py  tests.py  the task  wikiexceptions.py
task3/: 3 solution.py  Exceptions.py  README.md  Solution.py  data.py  intervals_data.py  solution.py  solution2.py  solution3.py  solution_3.py  solution_test.py  solution_tests.py  task3.md  task3.py  test.py  test_3.py  test_solution.py  test_solution3.py  test_task3.py  tests.py  the task
tests/: task1_test.py  task2_test.py  test.py  test1.py  test_task1.py  test_task2.py  test_task3.py
tests_task2/: conftest.py  data.py  test_file.py
(+39 files in other folders)
